[package]
name = "rs-wrk"
version = "0.2.0"
authors = ["Codeb Fan <codeb2cc@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
ctrlc = "3.1"
futures = { version = "0.3.5", features = ["async-await"] }
hdrhistogram = "6.3"
http = "0.2"
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2.6", features = ["macros", "io-std", "time", "rt-core", "rt-threaded"] }
url = "2.1"
